# env-drift-report

./: .gitignore  LICENSE  README.md  pyproject.toml
src/env_drift_report/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
