[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "env-drift-report"
version = "0.1.0"
description = "Compare dotenv files and report configuration drift."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Waheed Sattar" }
]
keywords = ["dotenv", "env", "configuration", "cli", "devops"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities"
]
dependencies = []

[project.scripts]
env-drift-report = "env_drift_report.cli:main"

[project.urls]
Homepage = "https://github.com/iwaheedsattar/env-drift-report"
Repository = "https://github.com/iwaheedsattar/env-drift-report"
Issues = "https://github.com/iwaheedsattar/env-drift-report/issues"

[tool.setuptools.packages.find]
where = ["src"]
